Seconda bozza (colori a caso)

--- a/index.html
+++ b/index.html
@@ -19,27 +19,31 @@
     </head>
 
     <div class="content">
-        <div id="presentazione">
+        <div id="presentazione" class="presentazione">
+            <h3>Profilo</h3>
+            <img src="product-1.jpg" alt="" class="img-profilo">
             <h1>Attilio Ferrise</h1>
-            <img src="product-1.jpg" alt="">
             <p>Sono attilio ferrise, studente di informatica. Sono uno sportivo e aspiro a diventare un imprenditore.</p>
         </div>
 
-        <div id="su-di-me">
+        <div id="su-di-me" class="su-di-me">
+            <h1>Su di me</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore necessitatibus est aliquid excepturi distinctio enim accusantium, facilis tenetur dolore asperiores recusandae non corrupti, ab explicabo animi porro placeat temporibus officiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, eos deleniti recusandae perspiciatis illum ut accusantium dicta harum animi tenetur, ad maxime blanditiis incidunt at quo neque ex ipsa nihil! Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima voluptatem nobis error soluta beatae ipsam cum assumenda inventore odio. Atque eos repellendus provident. At necessitatibus architecto nostrum dolorem laudantium ex?</p>
         </div>
 
-        <div id="portfolio">
-            <img src="product-1.jpg" alt="">
-            <img src="product-1.jpg" alt="">
-            <img src="product-1.jpg" alt="">
-            <img src="product-1.jpg" alt="">
-            <img src="product-1.jpg" alt="">
-            <img src="product-1.jpg" alt="">    
+        <div id="portfolio" class="portfolio">
+            <div class="immagini">
+                <img src="product-1.jpg" alt="">
+                <img src="product-1.jpg" alt="">
+                <img src="product-1.jpg" alt="">
+                <img src="product-1.jpg" alt="">
+                <img src="product-1.jpg" alt="">
+                <img src="product-1.jpg" alt="">   
+            </div> 
         </div>
 
-        <div id="contattami">
-            <form action="">
+        <div id="contattami" class="contatti">
+            <form action="" class="form">
                 <label for="">email</label>
                 <input type="text">
                 <label for="">messaggio</label>
