Ultima bozza (immagini e colori a caso)

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
 
         <div id="portfolio" class="portfolio">
+            <h1>Portfolio</h1>
             <div class="immagini">
                 <img src="product-1.jpg" alt="">
                 <img src="product-1.jpg" alt="">
@@ -44,10 +45,11 @@
 
         <div id="contattami" class="contatti">
             <form action="" class="form">
-                <label for="">email</label>
-                <input type="text">
-                <label for="">messaggio</label>
-                <input type="text">
+                <label for="">Email</label>
+                <input type="text" class="input">
+                <label for="">Messaggio</label>
+                <input type="text" class="input">
+                <button class="btn">Invia</button>
             </form>
         </div>
     </div>
