--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <head>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#presentazione">Presentazione</a></li>
                 <li><a href="#su-di-me">Su di me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
