--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
         <div id="portfolio" class="portfolio">
             <h1>Portfolio</h1>
             <div class="immagini">
-                <img src="product-1.jpg" alt="">
-                <img src="product-1.jpg" alt="">
-                <img src="product-1.jpg" alt="">
-                <img src="product-1.jpg" alt="">
-                <img src="product-1.jpg" alt="">
-                <img src="product-1.jpg" alt="">   
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">
+                <img src="product-1.jpg" alt="" width="200" height="200">  
             </div> 
         </div>
 
