--- a/index.html
+++ b/index.html
@@ -7,55 +7,40 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <head>
+
+    <div class="header">
         <nav>
             <ul class="nav-links">
-                <li><a href="#presentazione">Presentazione</a></li>
-                <li><a href="#su-di-me">Su di me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contattami">Contattami</a></li>
+                <li><a href="#home" class="navigation">Home</a></li>
+                <li><a href="#about-me" class="navigation">About me</a></li>
+                <li><a href="#portfolio" class="navigation">Portfolio</a></li>
+                <li><a href="#contattami" class="navigation">Contact</a></li>
             </ul>
-        </nav>
-    </head>
-
-    <div class="content">
-        <div id="presentazione" class="presentazione">
-            <h3>Profilo</h3>
-            <img src="product-1.jpg" alt="" class="img-profilo">
-            <h1>Attilio Ferrise</h1>
-            <p>Sono attilio ferrise, studente di informatica. Sono uno sportivo e aspiro a diventare un imprenditore.</p>
-        </div>
-
-        <div id="su-di-me" class="su-di-me">
-            <h1>Su di me</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore necessitatibus est aliquid excepturi distinctio enim accusantium, facilis tenetur dolore asperiores recusandae non corrupti, ab explicabo animi porro placeat temporibus officiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, eos deleniti recusandae perspiciatis illum ut accusantium dicta harum animi tenetur, ad maxime blanditiis incidunt at quo neque ex ipsa nihil! Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima voluptatem nobis error soluta beatae ipsam cum assumenda inventore odio. Atque eos repellendus provident. At necessitatibus architecto nostrum dolorem laudantium ex?</p>
-        </div>
-
-        <div id="portfolio" class="portfolio">
-            <h1>Portfolio</h1>
-            <div class="immagini">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">
-                <img src="product-1.jpg" alt="" width="200" height="200">  
-            </div> 
-        </div>
-
-        <div id="contattami" class="contatti">
-            <form action="" class="form">
-                <label for="">Email</label>
-                <input type="text" class="input">
-                <label for="">Messaggio</label>
-                <input type="text" class="input">
-                <button class="btn">Invia</button>
-            </form>
+        </nav>    
+    </div>
+ 
+    <div id="home" class="bg_gray home-page">
+        <div class="profile">
+            <img src="immagine 1.png" alt="" class="center"  height="300">
+            <h1 class="center name">Attilio Ferrise</h1>
+            <h3 class="center subtitle">Web & Videogame developer</h3>
+            <a href="" class="btn-cv center">Download CV</a>
         </div>
     </div>
+
+    <div id="about-me" class="bg_2 about-me">
+        <h1 class="center title-about">About me</h1>
+        <div class="containter-card">
+            <div class="center card">
+                <h1 class="center title-experience">Experience</h1>
+            </div>
+            <div class="center card">
+                <h1 class="center title-experience">Experience</h1>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
+
+
