--- a/index.html
+++ b/index.html
@@ -21,24 +21,74 @@
  
     <div id="home" class="bg_gray home-page">
         <div class="profile">
-            <img src="immagine 1.png" alt="" class="center"  height="300">
+            <img src="immagine 1.png" alt="" class="center" width="300" height="400">
             <h1 class="center name">Attilio Ferrise</h1>
             <h3 class="center subtitle">Web & Videogame developer</h3>
-            <a href="" class="btn-cv center">Download CV</a>
+            <div class="btn-container">
+                <a href="" class="btn-cv center">Download CV</a>
+                <a href="" class="btn-cv center">GitHub</a>
+            </div>
         </div>
     </div>
 
     <div id="about-me" class="bg_2 about-me">
         <h1 class="center title-about">About me</h1>
+        <div class="paragraph center">
+            <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ratione ad reprehenderit ea impedit aliquid assumenda tempore odit quo neque, aspernatur fugiat! Obcaecati illum exercitationem provident ipsa placeat fuga quos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro saepe dolor at temporibus maiores id illum, deserunt optio aspernatur sapiente, aliquid iusto nisi commodi in aliquam esse quam expedita repellat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quaerat vero commodi corporis aspernatur officiis sed perferendis, libero veniam dolorum placeat fuga sapiente ipsa, consectetur, unde eveniet animi sit impedit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam ratione consequatur unde iure non iusto fuga eveniet! Esse est dolorem consectetur praesentium placeat eveniet maiores, ipsa tempora impedit quasi accusamus.</p>
+        </div>
         <div class="containter-card">
             <div class="center card">
-                <h1 class="center title-experience">Experience</h1>
+                <h1 class="center title-experience">Education</h1>
+                <div class="center education-card">
+                    <i><b>Diploma Economico-Informatico</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>Booleen Boot Camp certification</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>Digitazon Front End developer certification</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>Web Application certification</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>User interfacee design certification</b></i>
+                </div>
             </div>
+
+
             <div class="center card">
                 <h1 class="center title-experience">Experience</h1>
+                <div class="center education-card">
+                    <i><b>Personal activity as a web developer</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>Jobs at CFweb</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>Creation of 2d videogames "ghost war"</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>Jobs at a car sharing start-up "Rideless"</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>5 e-comemrce built</b></i>
+                </div>
             </div>
         </div>
     </div>
+
+    <div id="portfolio" class="bg_gray portfolio">
+
+    </div>
+
+    <div id="contattami" class="bg_2 contattami"></div>
+
+    <footer class="center">
+        <h3 class="center footer-title">
+            Copyright &#169; 2024 Attilio Ferrise. All right reserved <br> Designed by Attilio Ferrie 
+        </h3>
+    </footer>
     
 </body>
 </html>
