--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-
-    <div class="header">
+    <div class="header" id="nav">
         <nav>
             <ul class="nav-links">
                 <li><a href="#home" class="navigation">Home</a></li>
@@ -26,15 +25,17 @@
             <h3 class="center subtitle">Web & Videogame developer</h3>
             <div class="btn-container">
                 <a href="" class="btn-cv center">Download CV</a>
-                <a href="" class="btn-cv center">GitHub</a>
+                <a href="https://github.com/Ferro-coding" class="btn-cv center">GitHub</a>
             </div>
         </div>
     </div>
 
-    <div id="about-me" class="bg_2 about-me">
-        <h1 class="center title-about">About me</h1>
-        <div class="paragraph center">
-            <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ratione ad reprehenderit ea impedit aliquid assumenda tempore odit quo neque, aspernatur fugiat! Obcaecati illum exercitationem provident ipsa placeat fuga quos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro saepe dolor at temporibus maiores id illum, deserunt optio aspernatur sapiente, aliquid iusto nisi commodi in aliquam esse quam expedita repellat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quaerat vero commodi corporis aspernatur officiis sed perferendis, libero veniam dolorum placeat fuga sapiente ipsa, consectetur, unde eveniet animi sit impedit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam ratione consequatur unde iure non iusto fuga eveniet! Esse est dolorem consectetur praesentium placeat eveniet maiores, ipsa tempora impedit quasi accusamus.</p>
+    <div id="about-me" class="bg_2 about-me p_50">
+        <div class="title-container">
+            <h1 class="center title-about">About me</h1>
+            <div class="paragraph center">
+                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ratione ad reprehenderit ea impedit aliquid assumenda tempore odit quo neque, aspernatur fugiat! Obcaecati illum exercitationem provident ipsa placeat fuga quos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro saepe dolor at temporibus maiores id illum, deserunt optio aspernatur sapiente, aliquid iusto nisi commodi in aliquam esse quam expedita repellat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quaerat vero commodi corporis aspernatur officiis sed perferendis, libero veniam dolorum placeat fuga sapiente ipsa, consectetur, unde eveniet animi sit impedit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam ratione consequatur unde iure non iusto fuga eveniet! Esse est dolorem consectetur praesentium placeat eveniet maiores, ipsa tempora impedit quasi accusamus.</p>
+            </div>
         </div>
         <div class="containter-card">
             <div class="center card">
@@ -75,14 +76,92 @@
                     <i><b>5 e-comemrce built</b></i>
                 </div>
             </div>
+
+            <div class="center card">
+                <h1 class="center title-experience">Skills</h1>
+                <div class="center education-card">
+                    <i><b>HTML - CSS - JS</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>BOOTSTRAP</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>WORDPRESS - ALTERVISTA</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>JAVA</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>PYTHON</b></i>
+                </div>
+                <div class="center education-card">
+                    <i><b>C++</b></i>
+                </div>
+            </div>
+
         </div>
     </div>
 
-    <div id="portfolio" class="bg_gray portfolio">
+    <div id="portfolio" class="bg_gray portfolio p_50">
+        <h1 class="center title-about">Portfolio</h1>
+        <div class="container-portfolio flex">
+            <div class="portfolio-card p_20">
+                <section class="pr_image"></section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos voluptas modi veniam vel, perferendis assum.<p>
+                <br>
+                <a href="" class="link-portfolio">Live demo →</a>
+            </div>
+            <div class="portfolio-card p_20">
+                <section class="pr_image"></section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos voluptas modi veniam vel, perferendis assum.<p>
+                <br>
+                <a href="" class="link-portfolio">Live demo →</a>
+            </div>
+            <div class="portfolio-card p_20">
+                <section class="pr_image"></section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos voluptas modi veniam vel, perferendis assum.<p>
+                <br>
+                <a href="" class="link-portfolio">Live demo →</a>
+            </div>
+            <div class="portfolio-card p_20">
+                <section class="pr_image"></section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos voluptas modi veniam vel, perferendis assum.<p>
+                <br>
+                <a href="" class="link-portfolio">Live demo →</a>
+            </div>
+            <div class="portfolio-card p_20">
+                <section class="pr_image"></section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos voluptas modi veniam vel, perferendis assum.<p>
+                <br>
+                <a href="" class="link-portfolio">Live demo →</a>
+            </div>
+            <div class="portfolio-card p_20">
+                <section class="pr_image"></section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos voluptas modi veniam vel, perferendis assum.<p>
+                <br>
+                <a href="" class="link-portfolio">Live demo →</a>
+            </div>
+        </div>
 
     </div>
 
-    <div id="contattami" class="bg_2 contattami"></div>
+    <div id="contattami" class="bg_2 contattami p_100">
+        <h1 class="center title-about m_20">Contact Me</h1>
+        <section class="form">
+            <form action="">
+                <input type="text" name="" id="email" class="p_15" placeholder="Email">
+                <input type="text" name="" id="email" class="p_15" placeholder="Your Message">
+                <!-- Se vuoi fare funzionare il form serve un bottone per collegarlo SE NON ERRO ma a me scocciava rifarne uno -->
+                <a href="" class="btn-cv center">Invia</a>
+            </form>
+        </section>
+
+    </div>
+
+    <div class="fixed">
+        <a href="#nav" class="btn-home">↑</a>
+    </div>
+
 
     <footer class="center">
         <h3 class="center footer-title">
